Fixed text aligning

--- a/style.css
+++ b/style.css
@@ -16,14 +16,14 @@
 	.topnav {
   		background-color: rgb(236, 242, 119);
 		padding: 1%;
-		text-align: left;
+		text-align: center;
 	}
 	.topnav a {
 		font-size: 1.5rem;
 		font-family: 'comic sans';
 		color: #b82771;
 		padding: .25rem 1rem;
-		text-align: left;
+		text-align: center;
 		background-color: rgb(236, 242, 119);
 		text-decoration: none;
 	}
